# nionswift-plugin-basic-image-processing

./: CHANGES.rst  README.rst  meta.yaml  setup.cfg
.github/workflows/: python-package.yml
idrobo_lab/basic_image_processing/test/: Processing_test.py
nionswift_plugin/basic_image_processing_ui/: BasicImageProcessingPanel.py  BasicImageProcessingPanelv2.py  __init__.py
nionswift_plugin/basic_image_processing_ui/test/: PlugIn_test.py
