[metadata]
name = nionswift-plugin-basic-image-processing
version = 0.1.0
author = Carla Acosta (Idrobo Lab)
description = Library and UI for processing with Nion Swift.
long_description = file: README.rst, CHANGES.rst
url = https://github.com/idrobo-lab/nionswift-plugin-basic-image-processing
license = GPL-3.0-only
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find_namespace:
python_requires = >=3.11
install_requires =
    nionswift>=16.14.0,<17.0.0
tests_require =
    nionswift
    numpy>=2.0,<3.0

[options.package_data]
idrobo_lab.basic_image_processing =
    resources/*

[options.packages.find]
include =
    nion
    idrobo_lab.basic_image_processing
    idrobo_lab.basic_image_processing.test
    nionswift_plugin
    nionswift_plugin.basic_image_processing_ui
    nionswift_plugin.basic_image_processing_ui.test
